# ml-infra

./: .gitignore  Dockerfile.dev  LICENSE  README.md  pyproject.toml
ml/datasets/mnist/: mnist.py  mnist.yaml
ml/launches/: mnist_classifier.yaml
ml/models/classifier/: classifier.py  classifier.yaml
ml/models/llm/: llm.py
ml/training/: mnist_train.py  train.py
ml/training/classifier_training/: classifier_training.py  classifier_training.yaml
ml/validation/classifier/: classifier_validation.py  classifier_validation.yaml
scripts/: .zshrc  setup.sh
scripts/docker/: into.sh  remove.sh  restart.sh  start.sh
submit/: README.md  cli.py  launch.py
submit/cloud_providers/: aggregate.py  base.py  lambda_labs.py
